--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </div>
         <div>
             <span>Checkboxes</span>
-            <ff field="input" type="checkbox" name="mycheckbox1" value="Green">
+            <ff field="input" type="checkbox" name="mycheckbox1" value="Green" checked>
             <ff field="input" type="checkbox" name="mycheckbox2" value="Blue">
         </div>
         <div>
             <span>Radio Buttons</span>
-            <ff field="input" type="radio" name="myradio" value="Yes">
+            <ff field="input" type="radio" name="myradio" value="Yes" checked>
             <ff field="input" type="radio" name="myradio" value="No">
         </div>
         <ff field="input" type="button" name="submit" value="Submit"></ff>
