--- a/index.html
+++ b/index.html
@@ -10,29 +10,34 @@
     <form action="" method="POST">
         <div>
             <span>Your Name</span>
-            <ff field="input" type="text" name="name" class="formfield">
+            <ff field="input" type="text" name="firstname" class="formfield" placeholder="first name"></ff>
+            <ff field="input" type="text" name="lastname" class="formfield" placeholder="last name"></ff>
         </div>
         <div>
             <span>Email</span>
-            <ff field="input" type="email" onclick="myValidationScript();">
+            <ff field="input" type="email" onclick="myValidationScript();"></ff>
         </div>
         <div>
             <span>Message1</span>
-            <ff field="textarea" name="message1" style="height:40px;width:200px;">
+            <ff field="textarea" name="message1" style="height:40px;width:200px;"></ff>
         </div>
         <div>
             <span>Message2</span>
-            <ff field="textarea" name="message2" style="height:40px;width:200px;">
+            <ff field="textarea" name="message2" style="height:40px;width:200px;"></ff>
+        </div>
+        <div>
+            <span>Select</span>
+            <ff field="select" name="mycheckbox2"><option value="Monday">Monday</option><option value="Tuesday">Tuesday</option></ff>
         </div>
         <div>
             <span>Checkboxes</span>
-            <ff field="input" type="checkbox" name="mycheckbox1" value="Green" checked>
-            <ff field="input" type="checkbox" name="mycheckbox2" value="Blue">
+            <ff field="input" type="checkbox" name="mycheckbox1" value="Green" checked></ff>
+            <ff field="input" type="checkbox" name="mycheckbox2" value="Blue"></ff>
         </div>
         <div>
             <span>Radio Buttons</span>
-            <ff field="input" type="radio" name="myradio" value="Yes" checked>
-            <ff field="input" type="radio" name="myradio" value="No">
+            <ff field="input" type="radio" name="myradio" value="Yes" checked></ff>
+            <ff field="input" type="radio" name="myradio" value="No"></ff>
         </div>
         <ff field="input" type="button" name="submit" value="Submit"></ff>
     </form>
@@ -49,7 +54,12 @@
                         el.setAttribute(`${key}`, `${attrs[key]}`);
                     }
                 }
+                while (fields[i].childNodes.length > 0) {
+                    console.log(fields[i].childNodes)
+                    el.appendChild(fields[i].childNodes[0]);
+                }
                 fields[i].parentNode.insertBefore(el, fields[i]);
+                fields[i].remove();
             }
         });
     </script>
