--- a/index.html
+++ b/index.html
@@ -10,55 +10,56 @@
     <form action="" method="POST">
         <div>
             <span>Your Name</span>
-            <ff field="input" type="text" name="firstname" class="formfield" placeholder="first name"></ff>
-            <ff field="input" type="text" name="lastname" class="formfield" placeholder="last name"></ff>
+            <f-f el="input" type="text" name="firstname" class="formel" placeholder="first name"></f-f>
+            <f-f el="input" type="text" name="lastname" class="formel" placeholder="last name"></f-f>
         </div>
         <div>
             <span>Email</span>
-            <ff field="input" type="email" onclick="myValidationScript();"></ff>
+            <f-f el="input" type="email" onclick="myValidationScript();"></f-f>
         </div>
         <div>
             <span>Message1</span>
-            <ff field="textarea" name="message1" style="height:40px;width:200px;"></ff>
+            <f-f el="textarea" name="message1" style="height:40px;width:200px;"></f-f>
         </div>
         <div>
             <span>Message2</span>
-            <ff field="textarea" name="message2" style="height:40px;width:200px;"></ff>
+            <f-f el="textarea" name="message2" style="height:40px;width:200px;"></f-f>
         </div>
         <div>
             <span>Select</span>
-            <ff field="select" name="mycheckbox2"><option value="Monday">Monday</option><option value="Tuesday">Tuesday</option></ff>
+            <f-f el="select" name="mycheckbox2"><option value="Monday">Monday</option><option value="Tuesday">Tuesday</option></f-f>
         </div>
         <div>
             <span>Checkboxes</span>
-            <ff field="input" type="checkbox" name="mycheckbox1" value="Green" checked></ff>
-            <ff field="input" type="checkbox" name="mycheckbox2" value="Blue"></ff>
+            <f-f el="input" type="checkbox" name="mycheckbox1" value="Green" checked></f-f>
+            <f-f el="input" type="checkbox" name="mycheckbox2" value="Blue"></f-f>
         </div>
         <div>
             <span>Radio Buttons</span>
-            <ff field="input" type="radio" name="myradio" value="Yes" checked></ff>
-            <ff field="input" type="radio" name="myradio" value="No"></ff>
+            <f-f el="input" type="radio" name="myradio" value="Yes" checked></f-f>
+            <f-f el="input" type="radio" name="myradio" value="No"></f-f>
         </div>
-        <ff field="input" type="button" name="submit" value="Submit"></ff>
+        <f-f el="input" type="button" name="submit" value="Submit"></f-f>
     </form>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            const fields = document.getElementsByTagName("ff");
-            for (let i=fields.length-1;i>=0;i--){
-                let attrs = fields[i].getAttributeNames().reduce((acc, name) => {
-                    return {...acc, [name]: fields[i].getAttribute(name)};
+            window.customElements.define('f-f', class extends HTMLElement {});
+            const els = document.getElementsByTagName("f-f");
+            for (let i=els.length-1;i>=0;i--){
+                let attrs = els[i].getAttributeNames().reduce((acc, name) => {
+                    return {...acc, [name]: els[i].getAttribute(name)};
                 }, {});
-                let el = document.createElement(attrs["field"]);
+                let el = document.createElement(attrs["el"]);
                 for (let key in attrs){
-                    if(attrs.hasOwnProperty(key) && key != "field"){
+                    if(attrs.hasOwnProperty(key) && key != "el"){
                         el.setAttribute(`${key}`, `${attrs[key]}`);
                     }
                 }
-                while (fields[i].childNodes.length > 0) {
-                    el.appendChild(fields[i].childNodes[0]);
+                while (els[i].childNodes.length > 0) {
+                    el.appendChild(els[i].childNodes[0]);
                 }
-                fields[i].parentNode.insertBefore(el, fields[i]);
-                fields[i].remove();
+                els[i].parentNode.insertBefore(el, els[i]);
+                els[i].remove();
             }
         });
     </script>
